Prevent wrapping in team names

--- a/src/viewer.less
+++ b/src/viewer.less
@@ -18,6 +18,8 @@ body{
   .team {
     width: 50%;
     float: left;
+    overflow: hidden;
+   white-space: nowrap;
   }
   .team_a {
   }
